; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_thread_sem_deinit.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_thread_sem_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sys_thread_sem_key = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sys_thread_sem_deinit() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @sys_thread_sem_key, align 4
  %3 = call i32* @pthread_getspecific(i32 %2)
  store i32* %3, i32** %1, align 8
  %4 = load i32*, i32** %1, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @sys_thread_sem_free(i32* %7)
  %9 = load i32, i32* @sys_thread_sem_key, align 4
  %10 = call i32 @pthread_setspecific(i32 %9, i32* null)
  br label %11

11:                                               ; preds = %6, %0
  ret void
}

declare dso_local i32* @pthread_getspecific(i32) #1

declare dso_local i32 @sys_thread_sem_free(i32*) #1

declare dso_local i32 @pthread_setspecific(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
